<resources>
    <string name="app_name">Exchange</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="warning">Warning</string>
    <string name="network_not_reachable">Network connection error, please check your network settings</string>
    <string name="password_rule" formatted="false">
        <![CDATA[0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM!@#¥%^&*-_]]></string>
    <string name="enter_password">Please enter password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="register_now">Register now</string>
    <string name="send">Send</string>
    <string name="sure">Sure</string>
    <string name="register_title">Register</string>
    <string name="reset_password_title">Reset login password</string>
    <string name="password">Password</string>
    <string name="amount">Amount</string>
    <string name="amount_title">Amount</string>
    <string name="order_title">Order</string>
    <string name="sell_title">Sell</string>
    <string name="buy_title">Buy</string>
    <string name="buy">Buy</string>
    <string name="number">Number</string>
    <string name="total_account">TotalAccount</string>
    <string name="fee">Fee</string>
    <string name="unit_price">Unit price</string>
    <string name="fund_password">Fund password</string>
    <string name="start_immediate">Start immediate</string>
    <string name="buy_detail">Buy detail</string>
    <string name="salable_balance">Salable balance：</string>
    <string name="sell_price">Sell price</string>
    <string name="sell_number">Sell number</string>
    <string name="my_all_fund">All fund</string>
    <string name="turn_in">Turn in</string>
    <string name="turn_out">Turn out</string>
    <string name="safety">Safety</string>
    <string name="recharge">Recharge</string>
    <string name="buy_back">Buy Back</string>
    <string name="identity_authentication">Identity authentication </string>
    <string name="payment_management">Payment management</string>
    <string name="graphic_verify_code">Graphic Verification Code</string>
    <string name="input_account">Please input account</string>
    <string name="input_password">Please input password</string>
    <string name="input_graphic_verify_code">Please input graphic verify code.</string>
    <string name="my_fund">My Fund</string>
    <string name="withdraw_tips">请勿将ETH/ZBA发送至您的比特币(BTC)地址,否则资金将会遗失。比特币的交易需要六个区块的确认,可能会花费1个小时以上才能完成。</string>
    <string name="recharge_tips">请勿将ETH/ZBA发送至您的比特币(BTC)地址,否则资金将会遗失。比特币的交易需要六个区块的确认,可能会花费1个小时以上才能完成。</string>
    <string name="copy_address">复制地址</string>
    <string name="logout">Logout</string>
    <string name="google_verify">Google验证:</string>
    <string name="phone_verify">Phone verify</string>
    <string name="email_verify">Email verify</string>
    <string name="login_password">Login password</string>
    <string name="original_password">原登录密码</string>
    <string name="new_password_rule">新密码(8~20位数字和字符组合,不能与资金密码相同)</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="fund_password_rule">资金密码(8~20位数字和字符组合,不能与登录密码相同)</string>
    <string name="set_fund_password">设置资金密码</string>
    <string name="bind_phone">绑定手机</string>
    <string name="please_set_google_verify">设置Google身份验证</string>
    <string name="email">邮箱</string>
    <string name="phone">手机</string>
    <string name="message">短信验证码</string>
    <string name="phone_number">手机号</string>
    <string name="email_verify_code">邮箱验证码</string>
    <string name="message_verify_code">短信验证码</string>
    <string name="six_google_verify_code">6位验证码</string>
    <string name="successfully_copied">Successfully copied</string>
    <string name="set_immediately">立即设置</string>
    <string name="cash_able_balance">可转出余额:</string>
    <string name="sell">出售</string>
    <string name="remarks">备注</string>
    <string name="no_fund_password_tips">您还没有设置资金密码,该密码将用于交易和转出的验证。为保证账户安全,请先设置资金密码。</string>
    <string name="all_in">全部发送</string>
    <string name="to_setting_grant_permission">Click "Confirm" to jump to system settings to open permissions</string>
    <string name="buy_in">买进</string>
    <string name="main">首页</string>
    <string name="transaction">交易</string>
    <string name="sell_out">卖出</string>
    <string name="order">订单</string>
    <string name="account">账户</string>
    <string name="reset">重置</string>
    <string name="pay_method_str">支付方式</string>
    <string name="register_account_hint">请用您的常用邮箱号作为账号</string>
    <string name="register_password_hint">设置登录密码(8～20位数字与字符组合)</string>
    <string name="register_password_again_hint">请再次输入密码</string>
    <string name="register_email_code_hint">邮箱验证码</string>
    <string name="register_have_account_text">已有账号？</string>
    <string name="register_login_immediately_text">立即登录</string>
    <string name="reset_email_hint">邮箱</string>
    <string name="reset_set_login_password_hint">设置新登录密码(8～20位数字与字符组合)</string>
    <string name="reset_password_again_hint">请再次输入密码</string>
    <string name="reset_email_code_hint">邮箱验证码</string>
    <string name="buy_pay_method_text">支付方式ETH</string>
    <string name="sell_out_price">卖出价</string>
    <string name="sell_out_volume">卖出量</string>
    <string name="sell_out_fee_text">出售需支付手续费，手续费为:</string>
    <string name="sell_out_transaction_amount">扣除手续费后的交易额:</string>
    <string name="no_google_verify_text">还未启用Google身份验证？</string>
    <string name="wait_to_sell">待出售</string>
    <string name="outcome">支出</string>
    <string name="income">收入</string>
    <string name="revoke">撤销</string>
    <string name="available">可用</string>
    <string name="freeze">冻结</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_right_email">请输入正确的邮箱格式</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_confirm_password">请输入确认密码</string>
    <string name="password_does_not_match">两次密码输入不一致</string>
    <string name="please_input_verify_code_first">请先输入验证码</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="setting">设置</string>
    <string name="bind">绑定</string>
    <string name="please_input_phone_number">请输入手机号！</string>
    <string name="please_input_phone_verify_code">请输入验证码！</string>
    <string name="please_input_email_verify_code">请输入邮箱验证码</string>
    <string name="please_input_message_code">请输入短信验证码！</string>
    <string name="close_verify">关闭验证</string>
    <string name="version">Version:</string>
    <string name="format_ssd" formatted="false">%s%s</string>
    <string name="bind_success">绑定成功！</string>
    <string name="modify">修改</string>
    <string name="private_key_str">密钥:</string>
    <string name="format_ss" formatted="false">%s%s</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="format_sss" formatted="false">%s%s %s</string>
    <string name="sell_detail">售出详情</string>
    <string name="withdraw_need_fee">转出需支付手续费,手续费为:</string>
    <string name="get_data_failure">获取数据失败</string>
    <string name="plus_sign">+</string>
    <string name="please_select_country_or_region">请选择国家或地区</string>
    <string name="fund_password_purpose">用于提币，交易的验证</string>
    <string name="phone_verify_purpose">用于提币,更改安全设置的验证</string>
    <string name="google_verify_purpose">用于提币,交易及更改安全设置的验证</string>
    <string name="no_enough_balance">余额不足！</string>
    <string name="please_input_sell_volume">请先输入卖出量！</string>
    <string name="please_input_sell_price">请先输入卖出价！</string>
    <string name="sell_volume_must_over_fee">卖出量不能低于手续费！</string>
    <string name="please_input_fund_password">请输入资金密码！</string>
    <string name="please_input_google_verify_code">请先输入google验证码！</string>
    <string name="available_balance">可用余额</string>
    <string name="not_to_buy_self">不能购买自己的订单</string>
    <string name="google_verify_private_key_intro">1.请用Google验证器扫描以下二维码或手动输入以下密钥</string>
    <string name="google_verify_six_verify_code">2.请输入Google验证器应用产生的6位验证码</string>
    <string name="google_account">账号:</string>
    <string name="invalid_tx_amount">无效的交易额</string>
    <string name="input_amount_to_withdraw">输入转出的金额</string>
    <string name="please_login_again">Please login again</string>
    <string name="please_input_receive_address">请输入接收地址</string>
    <string name="please_input_amount_withdraw">请输入转出金额</string>
    <string name="withdraw_address">提币地址</string>
    <string name="please_input_account_info">请输入账号信息！</string>
    <string name="congratulations_to_register_success">恭喜您，注册成功！</string>
    <string name="congratulations_to_reset_password_success">恭喜您，密码重置成功！</string>
    <string name="congratulations_to_buy_success">恭喜您，购买成功</string>
    <string name="sure_to_cancel_order">确定要撤销吗？</string>
    <string name="congratulations_to_withdraw_success">恭喜您，广播成功！</string>
    <string name="congratulations_to_sell_out">恭喜您，挂单成功！</string>
    <string name="no_data_info">没有数据信息</string>
    <string name="password_to_short">密码不能少于8位</string>
    <string name="please_input_original_password">请输入原密码！</string>
    <string name="please_input_new_password">请输入新密码！</string>
    <string name="modify_fund_password">修改资金密码</string>
    <string name="reset_fund_password">重置资金密码</string>
    <string name="please_choose">请选择</string>
    <string name="zero">0</string>
    <string name="retract">收起</string>
    <string name="expand">展开</string>
    <string name="price_curve">价格曲线</string>
    <string name="no_curve_info">没有对应曲线信息</string>
    <string name="no_data">没有获取到相关数据</string>
    <string name="verify_code_fail">Verify code fail</string>
    <string name="verify_code_expire">Verify code expire</string>
    <string name="login_failure_please_try_again">登录失败，请重试</string>
    <string name="email_already_be_register">账号已被注册</string>
    <string name="register_failure_please_try_again">注册失败，请重试</string>
    <string name="failure_to_bind_phone">手机绑定失败</string>
    <string name="failure_to_buy_please_try_again">购买失败，请重试</string>
    <string name="invalid_order_information">Invalid order information.</string>
    <string name="failure_to_close_verify_please_try_again">关闭验证失败，请重试</string>
    <string name="cancel_order_failure_please_try_again">撤销订单失败，请重试</string>
    <string name="failure_get_phone_verify_code">获取验证码失败</string>
    <string name="failure_to_reset_password">密码重置失败</string>
    <string name="failure_to_security_phone">更改手机状态失败</string>
    <string name="failure_to_security_email">更改邮箱状态失败</string>
    <string name="failure_to_security_google">更改google状态失败</string>
    <string name="failure_to_sell_out_please_try_again">挂单失败，请重试</string>
    <string name="txpassword_same_as_account_password">TxPassword is the same as the account password.</string>
    <string name="failure_security_txpassword">资金密码设置失败</string>
    <string name="failure_to_withdraw_please_try_again">广播失败，请重试</string>
    <string name="successfully_copied_secret">Successfully copied secret</string>
    <string name="successfully_copied_account">Successfully copied account</string>
    <string name="fun_password_not_same_as_login_password">新密码(8~20位数字和字符组合,不能与登录密码相同)</string>
    <string name="orignal_password">原资金密码</string>
    <string name="forget_fund_password">忘记资金密码？</string>
    <string name="immediate_reset">立即重置</string>
    <string name="current_password_is_wrong">密码错误</string>
    <string name="user_agreement_content">我已阅读并同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="recharge_unit">个贝</string>
    <string name="custom">自定义</string>
    <string name="amount_edit_digits">1234567890.</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="identity_authentication_tips">请如实填写您的身份信息,一经认证不可修改。</string>
</resources>