<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:exchange="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/include_header"/>

    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_account"
            android:layout_width="match_parent"
            exchange:hint="@string/register_account_hint"
            android:layout_marginTop="@dimen/d16"
            android:layout_height="wrap_content"
    />
    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_password"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/d16"
            exchange:hint="@string/register_password_hint"
            exchange:behaviour="checkBox"
            android:layout_height="wrap_content"
    />
    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_password_confirm"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/d16"
            exchange:hint="@string/register_password_again_hint"
            exchange:behaviour="checkBox"
            android:layout_height="wrap_content"
    />
    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_email_code"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/d16"
            exchange:hint="@string/register_email_code_hint"
            exchange:behaviour="text"
            android:layout_height="wrap_content"
    />
    <LinearLayout android:layout_width="match_parent"
                  android:orientation="horizontal"
                  android:gravity="center_vertical"
                  android:minHeight="@dimen/d20"
                  android:layout_marginLeft="@dimen/d20"
                  android:layout_marginTop="@dimen/d12"
                  android:layout_height="wrap_content">
        <CheckBox android:layout_width="wrap_content"
                  android:id="@+id/cb_agreement"
                  android:layout_height="wrap_content"/>
        <io.bcaas.exchange.view.textview.AppendStringLayout
                android:layout_width="match_parent"
                android:id="@+id/asp_user_agreement"
                exchange:content="@string/user_agreement_content"
                exchange:action_text="@string/user_agreement"
                exchange:action_color="@color/button_color"
                android:layout_height="wrap_content"/>
    </LinearLayout>


    <Button
            android:id="@+id/btn_register"
            style="@style/button_style"
            android:layout_marginTop="@dimen/d35"
            android:text="@string/sure"/>

    <io.bcaas.exchange.view.textview.AppendStringLayout
            android:layout_width="match_parent"
            android:id="@+id/asp_login"
            android:layout_marginTop="@dimen/d12"
            exchange:content="@string/register_have_account_text"
            exchange:action_text="@string/register_login_immediately_text"
            exchange:action_color="@color/button_color"
            exchange:text_size="14"
            android:layout_height="wrap_content"/>

</LinearLayout>