<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:exchange="http://schemas.android.com/apk/res-auto" xmlns:bcaas="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:id="@+id/ll_modify_password"
              android:layout_height="match_parent">
    <include layout="@layout/include_header"/>

    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_original_password"
            android:layout_width="match_parent"
            android:background="@color/white"
            bcaas:behaviour="normal"
            exchange:hint="@string/original_password"
            android:layout_marginTop="@dimen/d24"
            android:layout_height="@dimen/d48"/>
    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_new_password"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/d24"
            bcaas:behaviour="normal"
            android:background="@color/white"
            exchange:hint="@string/new_password_rule"
            android:layout_height="@dimen/d48"/>
    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_confirm_new_password"
            android:layout_width="match_parent"
            exchange:hint="@string/confirm_new_password"
            android:layout_marginTop="@dimen/d24"
            bcaas:behaviour="normal"
            android:background="@color/white"
            android:layout_height="@dimen/d48"/>

    <io.bcaas.exchange.view.textview.AppendStringLayout
            android:layout_width="match_parent"
            android:id="@+id/asp_fund"
            android:layout_marginTop="@dimen/d12"
            android:visibility="gone"
            android:layout_marginRight="@dimen/d20"
            exchange:content="@string/forget_fund_password"
            exchange:action_text="@string/immediate_reset"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/btn_sure"
            style="@style/button_style"
            android:layout_marginTop="@dimen/d36"
            android:text="@string/sure"/>

</LinearLayout>