<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bcaas="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/include_header"/>

    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_amount"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/d16"
            bcaas:hint="@string/reset_email_hint"
            android:layout_height="wrap_content"
    />
    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_password"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/d16"
            bcaas:hint="@string/reset_set_login_password_hint"
            bcaas:behaviour="checkBox"
            android:layout_height="wrap_content"
    />
    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_password_confirm"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/d16"
            bcaas:hint="@string/reset_password_again_hint"
            bcaas:behaviour="checkBox"
            android:layout_height="wrap_content"
    />
    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_email_code"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/d20"
            bcaas:hint="@string/reset_email_code_hint"
            bcaas:behaviour="text"
            android:layout_height="wrap_content"
    />

    <Button
            android:id="@+id/btn_sure"
            style="@style/button_style"
            android:layout_marginTop="@dimen/d35"
            android:text="@string/sure"/>
</LinearLayout>