<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:exchange="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/include_header"/>

    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_input_fund_password"
            android:layout_width="match_parent"
            exchange:hint="@string/fund_password"
            android:layout_marginTop="@dimen/d24"
            exchange:behaviour="normal"
            android:background="@color/white"
            android:layout_height="@dimen/d48"/>

    <io.bcaas.exchange.view.textview.AppendStringLayout
            android:layout_width="match_parent"
            android:id="@+id/asp_fund"
            android:layout_marginTop="@dimen/d12"
            android:layout_marginRight="@dimen/d20"
            exchange:content="@string/forget_fund_password"
            exchange:action_text="@string/immediate_reset"
            android:layout_height="wrap_content"/>


    <Button
            android:id="@+id/btn_sure"
            style="@style/button_style"
            android:layout_marginTop="@dimen/d35"
            android:text="@string/sure"/>


</LinearLayout>