<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:exchange="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:background="@color/theme_grey"
                android:layout_height="match_parent">

    <include layout="@layout/include_header"/>
    <ScrollView android:layout_width="match_parent"
                android:layout_below="@+id/rl_header"
                android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="vertical"
                      android:layout_height="wrap_content">
            <io.bcaas.exchange.view.viewGroup.SafetyCenterItemView
                    android:id="@+id/sciv_login_password"
                    android:layout_width="match_parent"
                    exchange:tabText="@string/login_password"
                    android:layout_height="wrap_content"/>
            <io.bcaas.exchange.view.viewGroup.SafetyCenterItemView
                    android:id="@+id/sciv_fund_password"
                    android:layout_width="match_parent"
                    exchange:tabText="@string/fund_password"
                    android:layout_height="wrap_content"/>

            <io.bcaas.exchange.view.viewGroup.SafetyCenterItemView
                    android:id="@+id/sciv_email_verify"
                    android:layout_width="match_parent"
                    exchange:tabText="@string/email_verify"
                    android:layout_height="wrap_content"/>

            <io.bcaas.exchange.view.viewGroup.SafetyCenterItemView
                    android:id="@+id/sciv_phone_verify"
                    android:layout_width="match_parent"
                    exchange:tabText="@string/phone_verify"
                    android:layout_height="wrap_content"/>

            <io.bcaas.exchange.view.viewGroup.SafetyCenterItemView
                    android:id="@+id/sciv_google_verify"
                    android:layout_width="match_parent"
                    exchange:tabText="@string/google_verify"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/btnLogout"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/d60"
                    android:layout_height="@dimen/d48"
                    android:background="@color/white"
                    android:text="@string/logout"
                    android:layout_marginBottom="@dimen/d20"
                    android:textAllCaps="false"
                    android:textColor="@color/button_color"
                    android:textSize="@dimen/text_size_16"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>