<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RadioButton android:layout_width="wrap_content"
                 android:layout_below="@+id/rb_one"
                 android:text="@string/custom"
                 style="@style/black_14_text_style"
                 android:id="@+id/rb_custom"

                 android:layout_height="wrap_content"/>
    <EditText android:layout_width="wrap_content"
              android:minWidth="@dimen/d80"
              android:id="@+id/et_amount"
              android:digits="@string/amount_edit_digits"
              android:inputType="numberDecimal"
              android:layout_marginLeft="@dimen/d20"
              android:layout_height="wrap_content"/>
    <TextView
            android:text="@string/recharge_unit"
            style="@style/black_14_text_style"/>
</LinearLayout>