<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:exchange="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/include_header"/>

    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_phone_number"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/d24"
            android:background="@color/white"
            exchange:hint="@string/phone_number"
            exchange:behaviour="phone"
            android:layout_height="@dimen/d48"/>
    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_message_code"
            android:layout_width="match_parent"
            exchange:hint="@string/message"
            exchange:behaviour="text"
            android:layout_marginTop="@dimen/d24"
            android:background="@color/white"
            android:layout_height="@dimen/d48"/>

    <Button
            android:id="@+id/btn_sure"
            style="@style/button_style"
            android:layout_marginTop="@dimen/d36"
            android:text="@string/sure"/>

</LinearLayout>