<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              xmlns:bcaas="http://schemas.android.com/apk/res-auto"
              android:id="@+id/ll_login"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d0"
            android:layout_weight="1"
            android:gravity="center|bottom">

        <ImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/d56"
                android:background="@color/transparent"
                android:src="@mipmap/ic_launcher"/>
    </LinearLayout>

    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_amount"
            android:layout_width="match_parent"
            bcaas:hint="@string/amount"
            bcaas:behaviour="normal"
            android:layout_height="wrap_content"
    />
    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_password"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/d20"
            android:layout_height="wrap_content"
            bcaas:hint="@string/password"
            bcaas:behaviour="checkBox"

    />
    <io.bcaas.exchange.view.editview.EditTextWithAction
            android:id="@+id/etwa_image_code"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/d20"
            android:layout_height="wrap_content"
            bcaas:hint="@string/graphic_verify_code"
            bcaas:behaviour="image"

    />
    <Button
            android:id="@+id/btn_login"
            style="@style/button_style"
            android:layout_marginTop="@dimen/d23"
            android:text="@string/login"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/d0"
            android:layout_marginLeft="@dimen/d20"
            android:layout_marginTop="@dimen/d16"
            android:layout_marginRight="@dimen/d20"
            android:layout_weight="1">

        <TextView
                android:id="@+id/tv_forget_password"
                style="@style/ff6f61_14_text_style"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:padding="@dimen/d2"
                android:text="@string/forget_password"/>

        <TextView
                android:id="@+id/tv_register_now"
                style="@style/ff6f61_14_text_style"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:padding="@dimen/d2"
                android:text="@string/register_now"/>

        <TextView
                android:id="@+id/tv_version"
                style="@style/black30_10_text_style"
                android:layout_height="@dimen/d48"
                android:layout_alignParentBottom="true"
                tools:text="version:1"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="@dimen/d30"
                android:minWidth="@dimen/d80"
                android:gravity="center_horizontal|bottom"/>

    </RelativeLayout>


</LinearLayout>