<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:exchange="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/theme_grey"
              android:layout_height="match_parent">

    <include layout="@layout/include_header"/>
    <TextView
            android:text="@string/identity_authentication"
            android:fontFamily="sans-serif-medium"
            android:layout_marginLeft="@dimen/text_size_20"
            android:layout_marginTop="@dimen/d23"
            style="@style/black_16_text_style"
    />
    <TextView
            android:text="@string/identity_authentication_tips"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/grey_999999"
            android:layout_marginLeft="@dimen/text_size_20"
            android:layout_marginTop="@dimen/d12"
            style="@style/black_14_text_style"
    />
    <io.bcaas.exchange.view.viewGroup.SafetyCenterItemView
            android:id="@+id/sciv_authentication"
            android:layout_width="match_parent"
            exchange:safeCenterText="@string/real_name_authentication"
            android:layout_height="wrap_content"/>

</LinearLayout>